Fixed the column class gap

--- a/assets/css/flexboxgrid.css
+++ b/assets/css/flexboxgrid.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 0.5rem;
 }
 
 .row.reverse {
